# Rose

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AppContext.cpp  AppContext.hpp  Renderer.hpp  SceneApp.cpp  TerrainApp.cpp  Test.3d.slang  Test.slang  WorkGraphApp.cpp  main.cpp  test_program.cpp
src/ConcurrentBinaryTree/: ConcurrentBinaryTree.hpp  cbt.cs.slang  leb.h
src/Core/: Buffer.cpp  Buffer.hpp  CommandContext.cpp  CommandContext.hpp  Device.cpp  Device.hpp  DxgiFormatConvert.slang  Gui.cpp  Gui.hpp  Hash.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  LoadImage.cpp  Math.h  Math.slang  MathTypes.hpp  MathUtils.h  MathUtils.slang  PackedTypes.slang  ParameterMap.hpp  Pipeline.cpp  Pipeline.hpp  Program.cpp  Program.hpp  Random.h  Random.slang  RoseEngine.h  RoseEngine.hpp  ShaderModule.cpp  ShaderModule.hpp  ShaderParameterBlock.hpp  ShaderParameters.hpp  SlangInterop.h  Swapchain.cpp  Swapchain.hpp  TransientResourceCache.hpp  Window.cpp  Window.hpp  (+2 more)
src/RadixSort/: RadixSort.h  RadixSort.hpp
src/Render/: Transform.h  Transform.hpp  ViewportWidget.hpp
src/Render/DualContouring/: Cell.slang  Contouring.cs.slang  DualContourMesher.hpp  ProceduralVolume.slang
src/Render/MeshRenderer/: Mesh.3d.slang  Mesh.hpp  MeshRenderer.hpp
src/Render/Procedural/: MathNode.cpp  MathNode.hpp  ProceduralFunction.cpp  ProceduralFunction.hpp  ProceduralNode.cpp  ProceduralNode.hpp  ProceduralNodeTree.cpp  ProceduralNodeTree.hpp
src/Render/Scene/: LoadGLTF.cpp  LoadGLTF.hpp  Material.h  Mesh.cpp  Mesh.hpp  Scene.3d.slang  SceneEditor.hpp  SceneNode.hpp  SceneRenderer.hpp
src/Render/SceneRenderer/: Outline.cs.slang  PathTracer.cs.slang  SceneEditor.hpp  SceneRenderer.hpp  Visibility.3d.slang  vbvh.cs.slang
src/Render/Terrain/: ConcurrentBinaryTree.cpp  DCTerrain.3d.slang  DualContourMesher.cs.slang  DualContourMesher.hpp  Heightmap.slang  OctVis.3d.slang  Octree.slang  SubdivisionNode.h  SubdivisionTree.hpp  Terrain.3d.slang  Terrain.cs.slang  Terrain.slang  TerrainRenderer.cpp  TerrainRenderer.hpp  voronoise.slang
src/Render/Terrain/cbt/: cbt.cs.slang  cbt.slang  leb.slang
src/Render/Transform/: Transform.h  Transform.hpp  Transform.slang
src/Render/cbt/: ConcurrentBinaryTree.cpp  cbt.cs.slang  cbt.h
src/Rose/ConcurrentBinaryTree/: ConcurrentBinaryTree.hpp  cbt.cs.slang  cbt.slang
src/Rose/Core/: AccelerationStructure.cpp  AccelerationStructure.hpp  Bitfield.h  Buffer.cpp  Buffer.hpp  CommandContext.cpp  CommandContext.hpp  Device.cpp  Device.hpp  DxgiFormatConvert.h  Gui.cpp  Gui.hpp  Image.cpp  Image.hpp  Indirect.slang  Instance.cpp  Instance.hpp  MathUtils.h  MathUtils.slang  PackedTypes.slang  ParameterMap.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.hpp  Quaternion.slang  Random.h  Random.slang  ShaderModule.cpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp  WindowedApp.hpp
src/Rose/PrefixSum/: PrefixSum.cs.slang  PrefixSum.h  PrefixSum.hpp
src/Rose/RadixSort/: RadixSort.cs.slang  RadixSort.hpp
src/Rose/Render/: GBuffer.slang  ViewportCamera.hpp  ViewportWidget.hpp
src/Rose/Render/SceneRenderer/: Outline.cs.slang  PathTracer.cs.slang  SceneEditor.hpp  SceneRenderer.hpp  Visibility.3d.slang  vbvh.cs.slang
src/Rose/Scene/: AccelerationStructure.hpp  LoadGLTF.cpp  LoadGLTF.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  Scene.slang  SceneNode.hpp  SceneTypes.h  Transform.h  Transform.hpp
src/Rose/Sorting/: DeviceRadixSort.cpp  DeviceRadixSort.h  DeviceRadixSort.slang  ForwardSweep.slang  GPUSortBase.h  GPUSorting.h  LICENSE  OneSweep.slang  SortCommon.slang  SweepCommon.slang  Tuner.h  Utility.slang
src/Rose/WorkGraph/: CommandGraph.hpp  WorkNode.hpp
src/Rose/WorkGraph/Nodes/: ComputeProgramNode.hpp  ResourceCopyNode.hpp  ResourceCreateNode.hpp
src/Scene/: AccelerationStructure.hpp  ConcurrentBinaryTree.cpp  ConcurrentBinaryTree.hpp  GBuffer.slang  LoadGLTF.cpp  Mesh.3d.slang  Mesh.cpp  Mesh.hpp  ObjectRenderer.hpp  QuadTree.hpp  Scene.slang  SceneNode.hpp  SceneTypes.h  Terrain.3d.slang  TerrainRenderer.cpp  TerrainRenderer.hpp  Transform.h  Transform.hpp  Transform.slang  ViewportWidget.hpp
src/Scene/cbt/: cbt.cs.slang  cbt.h  cbt.slang  leb.cs.slang  leb.slang
src/WorkGraph/: CommandGraph.hpp  WorkNode.hpp
src/WorkGraph/Nodes/: ComputeProgramNode.hpp  ResourceCopyNode.hpp  ResourceCreateNode.hpp
src/tests/: CMakeLists.txt  Test.3d.slang  Test.cs.slang  Test.slang  TestGraph.cs.slang  mesh.cpp  program.cpp  program_graph.cpp
src/tests/Mesh/: CMakeLists.txt  Mesh.3d.slang  Mesh.cpp
src/tests/Program/: Program.cs.slang.h
tests/: CMakeLists.txt
tests/Mesh/: Mesh.cpp
tests/PrefixSum/: CMakeLists.txt  PrefixSum.cpp
tests/Program/: CMakeLists.txt  Program.cpp  Program.cs.slang  Program.cs.slang.h
tests/RadixSort/: CMakeLists.txt  Sort.cpp
tests/Sorting/: CMakeLists.txt  Sort.cpp
